--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,12 @@
-<div id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div id="navbar" class="navbar navbar-static-top navbar-dark bg-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
             Zipkin<span class="muted" style="font-size: .75em; padding-left: 10px;">Investigate system behavior</span>
           </a>
         </div>
-        <div class="navbar-left">
-            <ul class="nav navbar-nav">
-                <li data-route="index" class="active"><a href="#">Find a trace</a></li>
-                <li data-route="dependency"><a href="#/dependencies">Dependencies</a></li>
-            </ul>
-        </div>
-        <div class="navbar-right" style="width: 50%">
-            <div class="navbar-right" style="padding-left: 15px">
-                <p class="navbar-text muted" id="environment"></p>
-            </div>
-            <form id="traceIdQueryForm" class="form-inline" role="form">
-                <div class="navbar-right" style="width: 25%; float: right">
-                    <div class="row well-sm clearfix">
-                        <input type="text" class="form-control input-sm" id="traceIdQuery" name="traceIdQuery" style="width: 100%" placeholder="Go to trace">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <!--/.nav-collapse -->
     </div>
 </div>
-<div class="container" style="padding-top:53px">
+<div class="container-fluid" style="padding-top:10px">
     <router-outlet></router-outlet>
 </div>
