--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .btn-expander {
-    width: 23px;
+    width: 28px;
 }
 .span {
     width:100%;
@@ -8,10 +8,11 @@
 }
 
 .waiting-left, .waiting-right {
-    height:17px;
     background-color:#f0f0f0;
     position: absolute;
     cursor: pointer;
+    overflow: hidden;
+    border: 1px solid #f0f0f0;
 }
 
 .waiting-left {
@@ -28,7 +29,6 @@
 }
 
 .server {
-    height:17px;
     padding-left: 10px;
     background-color:#caebff;
     position: absolute;
@@ -63,15 +63,17 @@ tr:hover .server {
     border: none;
     padding-top: 2px;
     padding-bottom: 2px;
-     font-size: smaller;
+    font-size: 14px !important;
+    line-height: 20px;
 }
 
 .timeline {
     border-left: 1px solid #e0e0e0;
-    height: 20px;
+    height: 30px;
     width: 20%;
     position: absolute;
     padding-left:5px;
+    font-size: 14px !important;
 }
 
 .timeline1 {
@@ -103,16 +105,21 @@ tr:hover .server {
 }
 
 .color-identifier {
-    width:23px;
-    height:24px;
+    width:28px;
+    height:25px;
     display:inline-block;
     margin-left:5px;
     margin-right:15px;
     border-radius: 3px;
     opacity: 0.5;
     border: 1px solid white;
+    vertical-align: middle;
 }
 
-.container {
+.navbar {
+    border-radius: 0px;
+}
+
+.container-fluid {
     width: 90%;
 }
