--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -36,9 +36,9 @@
                         <template #tipContent1>Client Send Server Receive<br>123 MS</template>
                         <template #tipContent2>Server Receive Server Send<br>123 MS</template>
                         <template #tipContent3>Server Send Client Receive<br>123 MS</template>
-                        <div [style.left]="getCs1(span)+'%'" [style.width]="getCs2(span)+'%'" class="waiting-left" [ngbTooltip]="tipContent1" placement="left">&nbsp;</div>
-                        <div [style.left]="getCr1(span)+'%'" [style.width]="getCr2(span)+'%'" class="waiting-right" [ngbTooltip]="tipContent2" placement="left">&nbsp;</div>
-                        <div [style.left]="getSr(span)+'%'" [style.width]="getSs(span)+'%'" class="server" [ngbTooltip]="tipContent3" placement="left">{{formatSpanInfo(span)}}</div>
+                        <div [style.left]="getCs1(span)+'%'" [style.width]="getCs2(span)+'%'" class="waiting-left" [ngbPopover]="tipContent1" placement="top" triggers="mouseenter:mouseleave" title="Span">&nbsp;</div>
+                        <div [style.left]="getCr1(span)+'%'" [style.width]="getCr2(span)+'%'" class="waiting-right" [ngbPopover]="tipContent2" placement="top" triggers="mouseenter:mouseleave" title="Span">&nbsp;</div>
+                        <div [style.left]="getSr(span)+'%'" [style.width]="getSs(span)+'%'" class="server" [ngbPopover]="tipContent3" placement="top" triggers="mouseenter:mouseleave" title="Span">{{formatSpanInfo(span)}}</div>
 
                         <div *ngFor="let annotation of getUserAnnotations(span)" [style.left]="getAnnotation(annotation)+'%'" class="annotation"></div>
                     </div>
