--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,5 @@
 </div>
 <div class="container-fluid" style="padding-top:10px">
     <router-outlet></router-outlet>
+    <template ngbModalContainer></template>
 </div>
