--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -39,10 +39,10 @@
                                 <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
-                                <h4 class="modal-title">Modal title</h4>
+                                <h4 class="modal-title">Span {{span.id}}</h4>
                             </div>
                             <div class="modal-body">
-                                <table>
+                                <table class="table table-borderless">
                                     <tr>
                                         <th>Date Time</th>
                                         <th>Relative Time</th>
