--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,7 +88,7 @@
             </div>
         </span>
     </div>
-    <div [hidden]="zipkin.hasTraces()" class="alert alert-info">
-        Please select the criteria for your trace lookup.
+    <div [hidden]="zipkin.hasTraces()" class="bd-callout bd-callout-warning">
+        <b>Please select the criteria for your trace lookup.</b>
     </div>
 </div>
