--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,7 +82,7 @@
                 <span class="label label-default">{{trace.spans.length}} spans</span>
 
             </div>
-            <div [hidden]="!trace.expanded" style="padding-top:12px;background-color:white" class="list-group-item">
+            <div [hidden]="!trace.expanded" class="list-group-item" style="border-top:0px">
                 <!-- GANTT GOES HERE -->
                 <tracechart [trace]="trace"></tracechart>
             </div>
