--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -25,7 +25,7 @@
         <tbody>
             <tr *ngFor="let span of trace.spans">
                 <td class="col-md-2 service-name"  [style.padding-left]="getSpanDepth(span)">
-                    <a (click)="toggleSpan(span)">
+                    <a (click)="toggleSpan(span)" href="javascript:void(0)">
                         <button class="btn-service-expander">{{span.expanded?"-":"+"}}</button>
                         {{formatServiceName(span)}}</a></td>
                 <td class="col-md-9  span-line">
