--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -25,11 +25,10 @@
         <tbody>
             <tr *ngFor="let span of trace.spans">
                 <td class="col-md-2 service-name"  [style.padding-left]="getSpanDepth(span)">
-                    <a (click)="toggleSpan(span)" href="javascript:void(0)">
-
-                        <button class="btn-service-expander" *ngIf="span.children.length>0">{{span.expanded?"-":"+"}}</button>
+                        <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && span.expanded" [name]="'chevron-down'"></fa>
+                        <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && !span.expanded" [name]="'chevron-right'"></fa>
                         <div class="btn-service-expander-empty" *ngIf="span.children.length==0"></div>
-                        {{formatServiceName(span)}}</a></td>
+                        <a (click)="toggleSpan(span)" href="javascript:void(0)">{{formatServiceName(span)}}</a></td>
                 <td class="col-md-9  span-line">
                     <div class="span">
                         <div class="timeline timeline1"></div>
