--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-<div id="navbar" class="navbar navbar-static-top navbar-dark bg-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-            Zipkin<span class="muted" style="font-size: .75em; padding-left: 10px;">Investigate system behavior</span>
-          </a>
-        </div>
-    </div>
-</div>
-<div class="container-fluid" style="padding-top:10px">
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <a class="navbar-brand" href="#">Zipkin <small>- Investigate system behavior</small></a>
+    <ul class="nav navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Traces</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/#/dependencies">Dependencies</a>
+        </li>
+    </ul>
+</nav>
+<div class="container-fluid" style="padding-top:63px">
     <router-outlet></router-outlet>
     <template ngbModalContainer></template>
 </div>
