--- a/src/styles.css
+++ b/src/styles.css
@@ -133,7 +133,7 @@ tr:hover .server:hover {
 .searchbox {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
-    background-color: #eceeef;
+    background-color: #f5f5f5;
     border-radius: 0.3rem;
 }
 
@@ -200,27 +200,10 @@ tr:hover .server:hover {
     padding-left:2px !important;
 }
 
-.btn-service-expander {
-    padding: 0px;
-    line-height: 9px;
-    width: 14px;
-    height: 14px;
-    vertical-align: middle;
-    background-color: #fff;
-    border:1px solid #d0d0d0;
-    font-size: 10px;
-    margin-top: -3px
-}
-
 .btn-service-expander-empty {
     display: inline-block;
      padding: 0px;
     line-height: 9px;
     width: 14px;
-    height: 14px;
-    vertical-align: middle;
-    background-color: #fff;
-    border:1px solid #fff;
     font-size: 10px;
-    margin-top: -3px
 }
