--- a/src/app/searchbox/searchbox.component.html
+++ b/src/app/searchbox/searchbox.component.html
@@ -66,3 +66,6 @@
     </div>
 
 </form>
+<div [hidden]="zipkin.hasTraces()" class="bd-callout bd-callout-warning">
+    <b>Please select the criteria for your trace lookup.</b>
+</div>
