--- a/src/app/tracegrouplist/tracegrouplist.component.html
+++ b/src/app/tracegrouplist/tracegrouplist.component.html
@@ -1,30 +1,31 @@
-<div class="list-group">
+<ul class="list-group">
     <template ngFor let-group [ngForOf]="getGroupedTraces()">
-        <div class="list-group-item">
-            <span class="col-sm-5">
+        <li class="list-group-item">
+            &nbsp;
+            <span class="col-sm-9">
                         <template #tipContent>Trace <b>Hash Color</b><br></template>
                         <span [ngbTooltip]="tipContent" placement="top" class="color-identifier" [style.background-color]="group.color" >&nbsp;</span>
             <b>{{group.name}}</b>
             </span>
 
-
-            <span class="label label-default">&nbsp;</span>
-
+            <span class="label label-default">{{group.spans}} spans</span>
+        </li>
         <template ngFor let-trace [ngForOf]="group.traces">
-            <div (click)=trace.toggleTrace() class="list-group-item list-group-item-action" style="cursor:pointer">
+            <li (click)=trace.toggleTrace() class="list-group-item list-group-item-action" style="cursor:pointer">
+                &nbsp;
                 <span class="col-sm-5">
                 <b>{{trace.id}}</b>
                 </span>
                 <span class="col-sm-2">{{trace.formatTimestamp()}}</span>
                 <span class="col-sm-2">{{trace.formatDuration()}}</span>
 
-                <span class="label label-default">{{trace.spans.length}} spans</span>
+                <span class="col-sm-2">&nbsp;</span>
 
-            </div>
-            <div [hidden]="!trace.expanded" class="list-group-item" style="border-top:0px">
+            </li>
+            <li [hidden]="!trace.expanded" class="list-group-item" style="border-top:0px">
                 <tracechart [trace]="trace"></tracechart>
-            </div>
+            </li>
         </template>
-        </div>
+
     </template>
-</div>
+</ul>
